refactor(jobs): split runs from job intent
Add run state migrations and backfill current job state into runs. Nomad allocation events now drive run status, quota ledger entries link to runs, and successful allocations terminate as SUCCEEDED.